Finish the most basic rich text editor feature

--- a/src/iframe/template.html
+++ b/src/iframe/template.html
@@ -7,4 +7,14 @@
 <body contenteditable="true">
 ${content}
 </body>
+<script>
+  window.addEventListener('message', function (event) {
+    if (event.data.type !== 'cmd') return
+    switch (event.data.cmd) {
+      case "bold":
+        document.execCommand('bold');
+        break;
+    }
+  });
+</script>
 </html>
