--- a/src/iframe/template.html
+++ b/src/iframe/template.html
@@ -9,8 +9,9 @@ ${content}
 </body>
 <script>
   window.addEventListener('message', function (event) {
-    if (event.data.type === 'cmd') {
-      const isItWork = document.execCommand(event.data.cmd, false, event.value);
+    const data = event.data;
+    if (data.type === 'cmd') {
+      const isItWork = document.execCommand(data.cmd, false, data.value);
       if (!isItWork) console.log(' why it does not work?!');
     }
   });
